--- a/app/src/main/res/layout/products_list_view_holder.xml
+++ b/app/src/main/res/layout/products_list_view_holder.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:backgroundTint="@color/black"
+    android:layout_margin="2dp"
     app:cardCornerRadius="20dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -13,8 +14,8 @@
 
         <ImageView
             android:id="@+id/product_list_product_icon"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="70dp"
+            android:layout_height="100dp"
             android:layout_margin="20dp"
             android:src="@drawable/product_list_icon"
             app:layout_constraintEnd_toEndOf="parent"
@@ -22,18 +23,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.026" />
-
-        <TextView
-            android:id="@+id/product_list_product_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:text="name"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/product_list_product_price" />
 
         <TextView
             android:id="@+id/product_list_product_abv"
