--- a/app/src/main/res/layout/grocery_fragment.xml
+++ b/app/src/main/res/layout/grocery_fragment.xml
@@ -1,14 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="20dp"
     tools:context=".view.GroceryFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="GROCERY"
-        android:textSize="200dp"/>
+     <androidx.constraintlayout.widget.ConstraintLayout
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:layout_margin="5dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+         <TextView
+             android:id="@+id/textView"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="10dp"
+             android:text="Корзина"
+             android:textSize="20dp"
+             android:textStyle="bold"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintStart_toStartOf="parent"
+             app:layout_constraintTop_toTopOf="parent" />
+
+         <androidx.recyclerview.widget.RecyclerView
+             android:id="@+id/grocery_recycler_view"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="15dp"
+             android:layout_margin="5dp"
+             android:layout_marginEnd="112dp"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+         <TextView
+             android:id="@+id/grocery_fragment_final_price"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="10dp"
+             android:text="1000$"
+             android:textStyle="italic"
+             android:layout_marginEnd="30dp"
+             app:layout_constraintEnd_toEndOf="parent"
+             app:layout_constraintTop_toBottomOf="@+id/grocery_recycler_view" />
+
+         <TextView
+             android:id="@+id/textView2"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_marginTop="10dp"
+             android:text="Итоговая сумма:"
+             android:layout_marginEnd="5dp"
+             android:textStyle="bold"
+             app:layout_constraintEnd_toStartOf="@+id/grocery_fragment_final_price"
+             app:layout_constraintTop_toBottomOf="@+id/grocery_recycler_view" />
+
+     </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
