--- a/app/src/main/res/layout/grocery_fragment.xml
+++ b/app/src/main/res/layout/grocery_fragment.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="20dp"
-    tools:context=".view.GroceryFragment">
+    app:cardCornerRadius="20dp">
 
-     <androidx.constraintlayout.widget.ConstraintLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_margin="5dp">
@@ -24,37 +24,60 @@
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />
 
-         <androidx.recyclerview.widget.RecyclerView
-             android:id="@+id/grocery_recycler_view"
-             android:layout_width="match_parent"
+         <TextView
+             android:id="@+id/textView3"
+             android:layout_width="wrap_content"
              android:layout_height="wrap_content"
-             android:layout_marginTop="15dp"
-             android:layout_margin="5dp"
-             android:layout_marginEnd="112dp"
-             app:layout_constraintEnd_toEndOf="parent"
+             android:layout_marginStart="10dp"
+             android:layout_marginTop="10dp"
+             android:textStyle="italic"
+             android:text="Количество товаров в корзине: "
+             app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/textView" />
 
          <TextView
-             android:id="@+id/grocery_fragment_final_price"
+             android:id="@+id/grocery_fragment_products_counter"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
-             android:layout_marginTop="10dp"
-             android:text="1000$"
-             android:textStyle="italic"
-             android:layout_marginEnd="30dp"
-             app:layout_constraintEnd_toEndOf="parent"
-             app:layout_constraintTop_toBottomOf="@+id/grocery_recycler_view" />
-
-         <TextView
-             android:id="@+id/textView2"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_marginTop="10dp"
-             android:text="Итоговая сумма:"
-             android:layout_marginEnd="5dp"
+             android:layout_marginBottom="10dp"
+             android:layout_marginStart="2dp"
+             android:text="13"
              android:textStyle="bold"
-             app:layout_constraintEnd_toStartOf="@+id/grocery_fragment_final_price"
-             app:layout_constraintTop_toBottomOf="@+id/grocery_recycler_view" />
+             app:layout_constraintBottom_toTopOf="@+id/grocery_recycler_view"
+             app:layout_constraintStart_toEndOf="@+id/textView3" />
 
-     </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/grocery_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:scrollbars="vertical"
+            app:layout_constraintBottom_toTopOf="@+id/textView2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+        <TextView
+            android:id="@+id/grocery_fragment_final_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="60dp"
+            android:layout_marginBottom="60dp"
+            android:text="1000$"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:text="Итоговая сумма:"
+            android:textStyle="bold"
+
+            app:layout_constraintBottom_toBottomOf="@+id/grocery_fragment_final_price"
+            app:layout_constraintEnd_toStartOf="@+id/grocery_fragment_final_price" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
