--- a/app/src/main/res/layout/user_profile_fragment.xml
+++ b/app/src/main/res/layout/user_profile_fragment.xml
@@ -23,7 +23,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView4"
                 android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_height="115dp"
                 android:layout_margin="5dp"
                 android:layout_marginStart="10dp"
                 app:cardCornerRadius="15dp"
@@ -54,7 +54,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="7dp"
                 android:text="name"
                 android:textColor="@color/black"
                 android:textStyle="bold"
@@ -80,10 +79,9 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
                 android:text="address"
-                android:layout_marginBottom="5dp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/user_profile_fragment_user_kyc_verification_icon"
                 app:layout_constraintStart_toEndOf="@+id/cardView4"
                 app:layout_constraintTop_toBottomOf="@+id/user_profile_fragment_user_phone_number" />
 
@@ -98,6 +96,28 @@
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/cardView4"
                 app:layout_constraintTop_toBottomOf="@+id/user_profile_fragment_user_name" />
+
+            <TextView
+                android:id="@+id/user_profile_fragment_user_birthday"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:text="birthday"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="10dp"
+                app:layout_constraintStart_toEndOf="@+id/cardView4"
+                app:layout_constraintTop_toBottomOf="@+id/user_profile_fragment_user_address" />
+
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/user_profile_fragment_user_kyc_verification_icon"
+                android:src="@drawable/kyc_not_verified_icon"
+                app:layout_constraintBottom_toBottomOf="@+id/cardView4"
+                app:layout_constraintEnd_toEndOf="@+id/user_profile_fragment_change_profile_button" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
