--- a/app/src/main/res/layout/user_profile_fragment.xml
+++ b/app/src/main/res/layout/user_profile_fragment.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="vertical"
     tools:context=".view.UserProfileFragment">
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView5"
@@ -44,6 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
+                android:clickable="true"
                 android:id="@+id/user_profile_fragment_change_profile_button"
                 android:src="@drawable/change_user_profile_button_icon"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -81,7 +85,6 @@
                 android:text="address"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/user_profile_fragment_user_kyc_verification_icon"
                 app:layout_constraintStart_toEndOf="@+id/cardView4"
                 app:layout_constraintTop_toBottomOf="@+id/user_profile_fragment_user_phone_number" />
 
@@ -114,6 +117,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
+                android:clickable="true"
                 android:id="@+id/user_profile_fragment_user_kyc_verification_icon"
                 android:src="@drawable/kyc_not_verified_icon"
                 app:layout_constraintBottom_toBottomOf="@+id/cardView4"
