--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -61,5 +61,13 @@
         <action
             android:id="@+id/action_userProfileFragment3_to_productListFragment"
             app:destination="@id/product_list_fragment" />
+        <action
+            android:id="@+id/action_user_profile_fragment_to_userLoginFragment"
+            app:destination="@id/userLoginFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/userLoginFragment"
+        android:name="ru.eightythreesoftware.shop_app.android.demo.view.UserLoginFragment"
+        android:label="fragment_user_login"
+        tools:layout="@layout/user_login_fragment" />
 </navigation>
