--- a/app/src/main/res/layout/product_list_fragment.xml
+++ b/app/src/main/res/layout/product_list_fragment.xml
@@ -65,16 +65,23 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="5dp"
         app:cardCornerRadius="25dp"
-        app:layout_constraintTop_toBottomOf="@+id/product_list_recycler_view"
-        tools:layout_editor_absoluteX="16dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/product_list_row_recycler_view">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/product_list_list_recycler_view"
+            android:layout_width="match_parent"
+            android:scrollbars="vertical"
+            android:layout_height="match_parent" />
 
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/product_list_recycler_view"
+        android:id="@+id/product_list_row_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
