--- a/app/src/main/res/layout/products_list_list_view_holder.xml
+++ b/app/src/main/res/layout/products_list_list_view_holder.xml
@@ -5,15 +5,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="150dp"
-        android:layout_height="200dp"
+        android:layout_width="200dp"
+        android:layout_height="250dp"
         app:cardCornerRadius="15dp">
 
         <ImageView
             android:id="@+id/products_list_list_recycler_view_product_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"/>
+            android:scaleType="fitXY"
+            android:layout_margin="7dp"/>
 
     </androidx.cardview.widget.CardView>
 </FrameLayout>
